--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7",
-    "@toolpad/core": "0.16.0",
+    "@toolpad/core": "^0.16.0",
     "react": "^19",
     "react-dom": "^19",
     "react-router": "^7",
